# ai-agent-service

./: .dockerignore  .env.example  Dockerfile  README.md  agent.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml
api/: main.py
api/route/: agent.py
config/: __init__.py  agent_configurer.py  main.py
model/: __init__.py  agent.py  embeddings_model.py  llm.py  main.py  recognizer.py  retriever.py  vector_store.py
model/chat_model/: anthropic.py  main.py
model/embeddings/: hugging_face.py  main.py
model/recognizer/: __init__.py  image_recognizer.py  main.py
model/retriever/: bm25.py  main.py
model/retriever/vector_store/: chroma.py  main.py
model/tool/: main.py
model/tool/search/: __init__.py  brave.py  duckduckgo.py  main.py
src/: __init__.py  container.py  dependency.py  main.py  provide.py  utility.py
src/agent/: __init__.py  agent.py  main.py  state.py
src/api/: __init__.py  dependency.py  image.py  label.py  main.py
src/config/: __init__.py  main.py
src/config/configurer/: __init__.py  agent.py  bm25.py  chat_model.py  embeddings.py  ensemble.py  mcp.py  search_tool.py  vector_store.py
src/config/configurer/interface/: __init__.py  agent.py  bm25.py  chat_model.py  embeddings.py  ensemble.py  mcp.py  search_tool.py  vector_store.py
src/config/configurer/interface/recognizer/: image.py
src/config/configurer/recognizer/: image.py
src/config/model/: __init__.py  agent.py  main.py  mcp.py
src/config/model/chat_model/: __init__.py  anthropic.py  google_genai.py  ollama.py
src/config/model/data/: __init__.py
src/config/model/embeddings/: __init__.py  google_genai.py  hugging_face.py  main.py
src/config/model/prompt/: __init__.py
src/config/model/recognizer/: __init__.py  main.py
src/config/model/recognizer/image/: __init__.py  main.py  preprocessing.py  yolo.py
src/config/model/retriever/: __init__.py  bm25.py  main.py
src/config/model/retriever/vector_store/: __init__.py  chroma.py  main.py
src/config/model/tool/: __init__.py
src/config/model/tool/search/: __init__.py  brave.py  duckduckgo.py  main.py
src/data/: __init__.py  base_model.py  container.py  database.py  dto.py  model.py
src/model/: __init__.py  main.py
src/model/chat_model/: __init__.py  anthropic.py  google_genai.py  main.py  ollama.py
src/model/embeddings/: hugging_face.py
src/model/prompt/: main.py
src/model/recognizer/: main.py
src/model/recognizer/image/: main.py  yolo.py
src/model/retriever/: __init__.py  bm25.py
src/model/retriever/vector_store/: chroma.py  main.py
src/model/tool/search/: brave.py  duckduckgo.py  main.py
src/process/: __init__.py
src/process/recognizer/: __init__.py  main.py
src/process/recognizer/image/: __init__.py  main.py
src/repository/: __init__.py  container.py  document.py  file.py  image.py  label.py  thread.py
src/repository/interface/: __init__.py  document.py  file.py  image.py  label.py  thread.py
src/route/: __init__.py  agent.py  document.py  export.py  image.py  label.py  thread.py
src/service/: agent.py  container.py  document.py  export.py  file.py  image.py  label.py  thread.py
src/service/interface/: agent.py  document.py  export.py  file.py  image.py  label.py  thread.py
src/util/: __init__.py  constant.py  error.py  function.py  main.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
