[project]
name = "rag-agent"
version = "0.1.0"
description = "An agent is built by LangGraph and desgin based on RAG-Contextual."
authors = [
    { name = "BangNhatLe", email = "bangle37568@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "jsonpickle (>=4.1.0,<5.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "nltk (>=3.9.1,<4.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "fastapi[standard] (>=0.115.9,<0.116.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "simsimd (>=6.4.9,<7.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
